<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NombreTelefono</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="añadir">Añadir</string>
    <string name="editar">Editar</string>
    <string name="title_activity_segunda">SegundaActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_actividad_lista">ActividadLista</string>
    <string name="listar">Listar</string>
    <string name="title_activity_actividad_borrar">ActividadBorrar</string>

</resources>
